<resources>
    <string name="app_name">Corn space</string>
    <string name="new_event">New Event</string>
    <string name="edit_name">Edit Name</string>
    <string name="hello">Hello!</string>
    <string name="joke_of_the_day">Joke of the day:</string>
    <string name="link1"><a href ="https://www.studentessentials.cornell.edu">studentessentials.cornell.edu</a></string>
    <string name="link2"><a href ="https://css.adminapps.cornell.edu/psp/cuselfservice/EMPLOYEE/HRMS/c/SA_LEARNER_SERVICES.SSS_STUDENT_CENTER.GBL?">css.adminapps.cornell.edu</a></string>
    <string name="link3"><a href ="https://classes.cornell.edu/scheduler/roster/SP22">classes.cornell.edu</a></string>
    <string name="link4"><a href ="https://dailycheck.cornell.edu/login">dailycheck.cornell.edu</a></string>
    <string name="link5"><a href ="https://canvas.cornell.edu">canvas.cornell.edu</a></string>
    <string name="link6"><a href ="https://it.cornell.edu">it.cornell.edu</a></string>
    <string name="link7"><a href ="https://cmsx.cs.cornell.edu/web/guest/">cmsx.cs.cornell.edu</a></string>
    <string name="link8"><a href ="https://www.gradescope.com">gradescope.com</a></string>
    <string name="helpful_links">Helpful Links</string>

    <string name="notes">My Notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="search">Search your notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>