<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinksActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:text="@string/helpful_links"
            />
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/link1"
            android:layout_height="30sp"
            android:text="@string/link1"
            android:linksClickable="true"
            android:autoLink="web"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:id="@+id/link2"
            android:text="@string/link2"
            android:linksClickable="true"
            android:autoLink="web"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:id="@+id/link3"
            android:text="@string/link3"
            android:linksClickable="true"
            android:autoLink="web"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:id="@+id/link4"
            android:text="@string/link4"
            android:linksClickable="true"
            android:autoLink="web"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>