<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:background="@color/cornell_red"
        >
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_home"
            android:background="@null"
            />
        <ImageButton
            android:id="@+id/eventButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_event"
            android:background="@null"
            android:layout_marginLeft="65dp"
            />
        <ImageButton
            android:id="@+id/noteButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_notes"
            android:background="@null"
            android:layout_marginLeft="65dp"
            />
        <ImageButton
            android:id="@+id/linkButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_link"
            android:background="@null"
            android:layout_marginLeft="65dp"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/joke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joke_of_the_day"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        app:layout_constraintVertical_bias="0.386" />

    <ImageButton
        android:id="@+id/saveName"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintStart_toEndOf="@+id/editName"
        app:layout_constraintTop_toTopOf="@+id/editName"
        android:src="@drawable/corn"
        android:background="@null"/>

    <TextClock
        android:id="@+id/ET_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format24Hour="MMM dd, yyyy k:mm"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:timeZone="America/New_York"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello" />


</androidx.constraintlayout.widget.ConstraintLayout>